WebCore/dom/Document.cpp
@@ -854,7 +854,7 @@ String Document::readyState() const
 String Document::encoding() const
 {
     if (TextResourceDecoder* d = decoder())
-        return d->encoding().name();
+        return d->encoding().domName();
     return String();
 }
 
