WebCore/platform/text/TextEncoding.h
@@ -42,6 +42,7 @@ namespace WebCore {
 
         bool isValid() const { return m_name; }
         const char* name() const { return m_name; }
+        const char* domName() const; // name exposed via DOM
         bool usesVisualOrdering() const;
         bool isJapanese() const;
         
